# Projects

./: README.md
CalculatorProject/: CMakeLists.txt  Calculator.cpp  Calculator.h  FunktionsBasic.h  main_calc.cpp  tempCodeRunnerFile.cpp
CalculatorProject/src/: CMakeLists.txt  Calculator.cpp
CalculatorProject/tests/: CMakeLists.txt  TestCases.cpp
